# CrestiMatrix

./: CMakeLists.txt  FactoryMatrixTemplate.h  FunctionMatrixTemplate.h  MatrixTemplate.h  SquareMatrixTemplate.h  main.cpp
test/: CMakeLists.txt  MatrixTemplateTest.cpp  SquareMatrixTemplateTest.cpp
